[tool.poetry]
name = "dash-sample"
version = "1.0.0"
description = "Dash sample code"
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
dash = "^2.18.1"
pandas = "^2.2.3"
gunicorn = "^23.0.0"
dash-auth = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
